Added game basic structure. Allow user to choose level.

--- a/client/src/stylesheets/abstracts/_variables.scss
+++ b/client/src/stylesheets/abstracts/_variables.scss
@@ -1,2 +1,12 @@
 // Colors
 $colorWhite: #fff;
+$navColor: #411db7;
+$footerColor: #29117a;
+$homeIconColor: #007EF7;
+$manualIconColor: #00A3B5;
+$playIconColor: #00CA9A;
+
+$lightGrayColor: #999;
+
+// Layout
+$sidebarWidth: 8rem;
