Display certain number of inputs depending on level. Refactor.

--- a/client/src/stylesheets/main.scss
+++ b/client/src/stylesheets/main.scss
@@ -7,6 +7,10 @@
 @import 'base/animations';
 @import 'base/typography';
 
+@import 'components/levels-box';
+@import 'components/status-box';
+@import 'components/inputs-box';
+
 @import 'layout/general';
 @import 'layout/navbar';
 @import 'layout/footer';
