--- a/client/src/stylesheets/layout/_footer.scss
+++ b/client/src/stylesheets/layout/_footer.scss
@@ -2,7 +2,7 @@
   @include centerItems;
 
   width: 100%;
-  height: 5rem;
+  height: $footerHeight;
   text-align: center;
   color: $colorWhite;
   z-index: 1;
