--- a/client/src/stylesheets/components/_inputs-box.scss
+++ b/client/src/stylesheets/components/_inputs-box.scss
@@ -14,7 +14,7 @@
     padding: .5rem;
     border-radius: 5px;
     margin-right: 1rem;
-    border: 3px solid $homeIconColor;
+    border: 3px solid red;
     text-align: center;
     font-size: 2.5rem;
 
