--- a/client/src/stylesheets/main.scss
+++ b/client/src/stylesheets/main.scss
@@ -8,8 +8,8 @@
 @import 'base/typography';
 
 @import 'components/levels-box';
-@import 'components/status-box';
 @import 'components/inputs-box';
+@import 'components/main-game-container';
 
 @import 'layout/general';
 @import 'layout/navbar';
