--- a/client/src/stylesheets/components/_inputs-box.scss
+++ b/client/src/stylesheets/components/_inputs-box.scss
@@ -4,19 +4,16 @@
     margin: 4rem 0;
   }
 
-  &__inputs-button {
-    align-self: center;
-    margin-bottom: 4rem;
-  }
-
   &__digit-input {
     width: 5rem;
     padding: .5rem;
     border-radius: 5px;
     margin-right: 1rem;
-    border: 3px solid red;
     text-align: center;
     font-size: 2.5rem;
+    color: $lavenderColor;
+    border: none;
+    background-color: $colorWhite;
 
     &:focus {
       outline: none;
