--- a/client/src/stylesheets/pages/_game.scss
+++ b/client/src/stylesheets/pages/_game.scss
@@ -26,9 +26,30 @@
 
   .main-game-container {
     position: absolute;
-    top: 30%;
+    top: 23%;
+    transform: translate(-50%, -50%);
+    animation-duration: 1.5s;
+    left: -100%;
+
+    &--shown {
+      left: 50%;
+      animation-name: showMainGameContainer;
+    }
+  }
+
+  .history {
+    position: absolute;
+    top: 71%;
     left: 50%;
     transform: translate(-50%, -50%);
+    opacity: 0;
+    height: 5rem;
+    transition: all .5s ease;
+
+    &--shown {
+      height: 30rem;
+      opacity: 1;
+    }
   }
 
   .send-attempt-button {
