--- a/client/src/stylesheets/themes/_moderate-level-theme.scss
+++ b/client/src/stylesheets/themes/_moderate-level-theme.scss
@@ -4,6 +4,10 @@
   .status {
     // Corners color
     background-color: $lavenderColor;
+
+    &__error-icon {
+      color: $aquaColor;
+    }
   }
 
   .inputs-box {
