--- a/client/src/stylesheets/base/_animations.scss
+++ b/client/src/stylesheets/base/_animations.scss
@@ -54,3 +54,17 @@
     left: 50%;
   }
 }
+
+@keyframes scaleSuccessArrow {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.3);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
