--- a/client/src/stylesheets/components/_history.scss
+++ b/client/src/stylesheets/components/_history.scss
@@ -12,12 +12,25 @@
   &__item {
     color: $colorWhite;
     font-size: 2.7rem;
-    letter-spacing: 2.5px;
+    letter-spacing: 4px;
     list-style-type: none;
     padding: 0;
     text-align: center;
     margin-bottom: 10px;
+    padding-bottom: 3px;
     font-weight: 700;
+  }
+
+  &__digits-guessed {
+    margin-left: 10px;
+    padding: 0 5px;
+    border-radius: 5px;
+  }
+
+  &__placements-guessed {
+    margin-right: 10px;
+    padding: 0 5px;
+    border-radius: 5px;
   }
 
   // *** Scrollbar ***
