--- a/client/src/stylesheets/main.scss
+++ b/client/src/stylesheets/main.scss
@@ -8,6 +8,8 @@
 @import 'base/typography';
 
 @import 'components/levels-box';
+@import 'components/celebration';
+@import 'components/victory-message-box';
 @import 'components/inputs-box';
 @import 'components/history';
 @import 'components/main-game-container';
