--- a/client/src/stylesheets/pages/_game.scss
+++ b/client/src/stylesheets/pages/_game.scss
@@ -51,6 +51,16 @@
       opacity: 1;
     }
   }
+
+  .victory-message-box {
+    position: absolute;
+    z-index: 10000;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation-duration: 1s;
+    animation-name: showVictoryMessage;
+  }
 }
 
 
