--- a/client/src/stylesheets/main.scss
+++ b/client/src/stylesheets/main.scss
@@ -13,6 +13,8 @@
 @import 'components/inputs-box';
 @import 'components/history';
 @import 'components/main-game-container';
+@import 'components/help';
+@import 'components/timer';
 
 @import 'layout/general';
 @import 'layout/navbar';
