--- a/client/src/stylesheets/pages/_game.scss
+++ b/client/src/stylesheets/pages/_game.scss
@@ -61,6 +61,12 @@
     animation-duration: 1s;
     animation-name: showVictoryMessage;
   }
+
+  .timer {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
 }
 
 
