--- a/client/src/stylesheets/main.scss
+++ b/client/src/stylesheets/main.scss
@@ -21,6 +21,7 @@
 @import 'layout/footer';
 
 @import 'pages/game';
+@import 'pages/manual';
 
 @import 'themes/easy-level-theme';
 @import 'themes/moderate-level-theme';
