--- a/client/src/stylesheets/main.scss
+++ b/client/src/stylesheets/main.scss
@@ -15,6 +15,7 @@
 @import 'components/main-game-container';
 @import 'components/help';
 @import 'components/timer';
+@import 'components/leaderboard';
 
 @import 'layout/general';
 @import 'layout/navbar';
