Added next and previous button in pagination..

--- a/client/src/stylesheets/components/_leaderboard.scss
+++ b/client/src/stylesheets/components/_leaderboard.scss
@@ -24,9 +24,9 @@
   }
 
   tr:nth-child(odd) {
-    background: $lavenderColor;
+    background: darken($color: $lavenderColor, $amount: 10 );
   }
   tr:nth-child(even) {
-    background: $aquaColor;
+    background: $lavenderColor;
   }
 }
