--- a/client/src/stylesheets/main.scss
+++ b/client/src/stylesheets/main.scss
@@ -16,6 +16,8 @@
 @import 'components/help';
 @import 'components/timer';
 @import 'components/leaderboard';
+@import 'components/filters';
+@import 'components/pagination';
 
 @import 'layout/general';
 @import 'layout/navbar';
