--- a/client/src/stylesheets/components/_timer.scss
+++ b/client/src/stylesheets/components/_timer.scss
@@ -11,4 +11,10 @@
   font-weight: 700;
   font-size: 2rem;
 
+  &__icon {
+    font-size: 3.5rem;
+    position: absolute;
+    left: 25px;
+  }
+
 }
