--- a/client/src/stylesheets/main.scss
+++ b/client/src/stylesheets/main.scss
@@ -25,6 +25,7 @@
 
 @import 'pages/game';
 @import 'pages/manual';
+@import 'pages/require-login';
 
 @import 'themes/easy-level-theme';
 @import 'themes/moderate-level-theme';
