--- a/client/src/stylesheets/pages/_require-login.scss
+++ b/client/src/stylesheets/pages/_require-login.scss
@@ -1,6 +1,66 @@
 .require-login {
-  display: flex;
-  flex-flow: row wrap;
-  background-color: red;
+  // display: flex;
+  // flex-flow: row wrap;
+  // justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  margin: auto;
+  padding: 5rem;
+
+  &__section {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+
+    box-shadow: 10px 10px 20px $lightGrayColor;
+    overflow: hidden;
+    text-align: center;
+    font-size: 2.5rem;
+    color: $colorWhite;
+    width: 100%;
+    height: 10rem;
+
+    animation-duration: .7s;
+    animation-fill-mode: forwards;
+    animation-name: joinSections;
+
+    &--welcome {
+      background-color: $lavenderColor;
+      font-weight: 700;
+    }
+    &--should-login {
+      background-color: $aquaColor;
+    }
+    &--should-login-2 {
+      background-color: $sunshineColor;
+    }
+    &--login {
+      background-color: $crimsonSkyColor;
+      height: 12rem;
+    }
+  }
+
+  &__sign-in-button {
+    color: $colorWhite;
+    transition: background-color .4s ease;
+    flex-grow: 1;
+    padding: 1rem;
+
+    &:hover {
+      color: $colorWhite;
+      text-decoration-line: none;
+      background-color: darken($crimsonSkyColor, 5);
+    }
+  }
+
+  &__google-icon {
+    font-size: 5rem;
+    display: block;
+    margin: auto;
+
+  }
 
 }
