Show message when user submits a score

--- a/client/src/stylesheets/base/_animations.scss
+++ b/client/src/stylesheets/base/_animations.scss
@@ -116,4 +116,24 @@
 
 }
 
+@keyframes showSuccessMessage {
+  0% {
+    top: -500px;
+  }
+
+  100% {
+    top: 0;
+  }
+}
+
+@keyframes hideSuccessMessage {
+  0% {
+    top: 0;
+  }
+
+  100% {
+    top: -500px;
+  }
+}
+
 
