--- a/client/src/stylesheets/main.scss
+++ b/client/src/stylesheets/main.scss
@@ -18,6 +18,7 @@
 @import 'components/leaderboard';
 @import 'components/filters';
 @import 'components/pagination';
+@import 'components/success-message';
 
 @import 'layout/general';
 @import 'layout/navbar';
